[gd_scene load_steps=14 format=3 uid="uid://drtc6bekpkmus"]

[ext_resource type="Texture2D" uid="uid://t3tug4fs0fmd" path="res://Assets/UI/Dialogue/DialogueBox.png" id="1_f60yo"]
[ext_resource type="Script" uid="uid://5b143mgi61rw" path="res://GameMenu.gd" id="1_go8lt"]
[ext_resource type="PackedScene" uid="uid://bvi606w45k54p" path="res://Scenes/UI/Option_Button.tscn" id="2_55bfj"]
[ext_resource type="FontFile" uid="uid://c4vkhox6clp7l" path="res://Assets/Fonts/FiveFontsatFreddy's-Regular.ttf" id="2_phepk"]
[ext_resource type="Script" uid="uid://6vl1qahxepu4" path="res://SavesMenu.gd" id="5_hv635"]
[ext_resource type="PackedScene" uid="uid://cjtu2m2m61c1h" path="res://Scenes/UI/Save_Slot.tscn" id="5_wtucc"]
[ext_resource type="PackedScene" uid="uid://k75lcewr1yuu" path="res://Scenes/UI/Load_Slot.tscn" id="7_amb2j"]
[ext_resource type="Texture2D" uid="uid://dp8jlgw0h2lbs" path="res://Assets/UI/BackButton/Back_Button.png" id="7_tc12t"]
[ext_resource type="Texture2D" uid="uid://cfqe77236xewr" path="res://Assets/UI/BackButton/Back_Button_Hover.png" id="9_amb2j"]
[ext_resource type="Texture2D" uid="uid://bd5h8t7f4emaf" path="res://Assets/UI/BackButton/Back_Button_Pressed.png" id="10_dro2m"]
[ext_resource type="Script" uid="uid://bwjrlyjkk1480" path="res://CustomBaseButton.gd" id="10_ghs8l"]

[sub_resource type="LabelSettings" id="LabelSettings_go8lt"]
font = ExtResource("2_phepk")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_dro2m"]
font = ExtResource("2_phepk")
font_size = 64

[node name="Game_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_go8lt")
title_variations = Array[String](["Blub", "Huhu!", "Gawk", "Very Menu", "Totally Menu", "Huh?", "What is it?", "Heya!"])

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.798958
anchor_bottom = 0.896296
offset_right = -1035.0
offset_bottom = -774.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
texture = ExtResource("1_f60yo")
region_rect = Rect2(0, 0, 150, 40)
patch_margin_left = 4
patch_margin_top = 3
patch_margin_right = 4
patch_margin_bottom = 3
metadata/_edit_use_anchors_ = true

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.270312
anchor_top = 0.17963
anchor_right = 0.730729
anchor_bottom = 0.344444
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(435, 70)
text = "Title"
label_settings = SubResource("LabelSettings_go8lt")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Save_Button" parent="Main" instance=ExtResource("2_55bfj")]
layout_mode = 1
anchor_left = 0.347917
anchor_top = 0.382407
anchor_right = 0.644792
anchor_bottom = 0.456481
offset_right = -456.0
offset_bottom = -64.0
label_text = "Save"

[node name="Load_Button" parent="Main" instance=ExtResource("2_55bfj")]
layout_mode = 1
anchor_left = 0.347917
anchor_top = 0.483333
anchor_right = 0.644792
anchor_bottom = 0.557407
offset_top = -1.00003
offset_right = -456.0
offset_bottom = -65.0
label_text = "Load"

[node name="Option_Button" parent="Main" instance=ExtResource("2_55bfj")]
layout_mode = 1
anchor_left = 0.347917
anchor_top = 0.587037
anchor_right = 0.644792
anchor_bottom = 0.661111
offset_top = -5.0
offset_right = -456.0
offset_bottom = -69.0

[node name="Exit_Button" parent="Main" instance=ExtResource("2_55bfj")]
layout_mode = 1
anchor_left = 0.347917
anchor_top = 0.693519
anchor_right = 0.644792
anchor_bottom = 0.767593
offset_left = -6.10352e-05
offset_top = -12.0
offset_right = -456.0
offset_bottom = -76.0
label_text = "Exit"

[node name="Save" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_hv635")

[node name="SaveSlot" parent="Save" instance=ExtResource("5_wtucc")]
layout_mode = 0
anchor_left = 0.247396
anchor_top = 0.165741
anchor_right = 0.755208
anchor_bottom = 0.355556
offset_right = -780.0
offset_bottom = -164.0
metadata/_edit_use_anchors_ = true

[node name="SaveSlot2" parent="Save" instance=ExtResource("5_wtucc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247396
anchor_top = 0.390741
anchor_right = 0.755208
anchor_bottom = 0.580556
offset_right = -780.0
offset_bottom = -164.0
save_index = 1
metadata/_edit_use_anchors_ = true

[node name="SaveSlot3" parent="Save" instance=ExtResource("5_wtucc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247396
anchor_top = 0.615741
anchor_right = 0.755208
anchor_bottom = 0.805556
offset_right = -780.0
offset_bottom = -164.0
save_index = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="Save"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4375
anchor_top = 0.0425926
anchor_right = 0.5625
anchor_bottom = 0.168519
grow_horizontal = 2
grow_vertical = 2
text = "Save"
label_settings = SubResource("LabelSettings_dro2m")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Load" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_hv635")

[node name="LoadSlot" parent="Load" instance=ExtResource("7_amb2j")]
layout_mode = 0
offset_left = 475.0
offset_top = 179.0
offset_right = 669.999
offset_bottom = 220.0

[node name="LoadSlot2" parent="Load" instance=ExtResource("7_amb2j")]
layout_mode = 0
offset_left = 475.0
offset_top = 422.0
offset_right = 669.999
offset_bottom = 463.0
save_index = 1

[node name="LoadSlot3" parent="Load" instance=ExtResource("7_amb2j")]
layout_mode = 0
offset_left = 475.0
offset_top = 665.0
offset_right = 669.999
offset_bottom = 706.0
save_index = 2

[node name="Title" type="Label" parent="Load"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4375
anchor_top = 0.0425926
anchor_right = 0.5625
anchor_bottom = 0.168519
grow_horizontal = 2
grow_vertical = 2
text = "Load"
label_settings = SubResource("LabelSettings_dro2m")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Return" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.171875
anchor_top = 0.0509259
anchor_right = 0.25
anchor_bottom = 0.189815
mouse_filter = 1
texture = ExtResource("7_tc12t")
region_rect = Rect2(0, 0, 25, 25)
script = ExtResource("10_ghs8l")
default_button_img = ExtResource("7_tc12t")
hovered_button_img = ExtResource("9_amb2j")
pressed_button_img = ExtResource("10_dro2m")
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="Return" to="Return" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Return" to="Return" method="_on_mouse_exited"]
